[build-system]
requires = ["setuptools>=61.2", "wheel", "build>=0.8.0"]
build-backend = "setuptools.build_meta"

[project]
description = "Undub project for Tecmo's Project Zero - the EU version (the first one) for the PS2"
name = "zeroundub"
version = "1.3.3"
authors = [{ name = "karas84" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/karas84/ProjectZeroUndub"

[project.scripts]
zeroundub = "zeroundub.cli.cmdline.undub:main"
zeroundub-gui = "zeroundub.gui.tkgui:main"

[tool.setuptools.package-dir]
zeroundub = "zeroundub"

[tool.black]
line-length = 120
target-version = ['py37']

[tool.ruff]
line-length = 120
